tests/ui/typeck/return-expression-invalid-callee.stderr
error[E0618]: expected function, found `!`
  --> $DIR/return-expression-invalid-callee.rs:7:5
   |
LL |     (return)((), ());
   |     ^^^^^^^^--------
   |     |
   |     call expression requires function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0618`.
